--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 /* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
+
+
+.card{
+    max-width: 50%;
+    padding: 70px;
+}
+input[type="submit"]{
+    background-color: lightblue;
+    border-radius: 3px;
+    padding: 5px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
+input[type="text"]{
+    border-radius: 3px;
+    padding: 5px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
