--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,73 @@ input[type="text"]{
     -ms-border-radius: 3px;
     -o-border-radius: 3px;
 }
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: hsl(0,0%,95%);
+}
+.stopwatch{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border: 5px solid;
+    padding: 30px;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+}
+.display{
+    font-size: 5rem;
+    font-family: monospace;
+    font-weight: bold;
+    background-color: hsla(62, 100%, 50%, 0.91);
+    text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.75);
+    margin-bottom: 25px;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+}
+.controls button{
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin: 5px;
+    min-width: 125px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    color: white;
+    transition: background-color 0.5s ease;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    -webkit-transition: background-color 0.5s ease;
+    -moz-transition: background-color 0.5s ease;
+    -ms-transition: background-color 0.5s ease;
+    -o-transition: background-color 0.5s ease;
+}
+.start-button{
+    background-color: hsl(115, 100%, 40%);
+}
+.start-button:hover{
+    background-color: hsl(115, 100%, 35%);
+}
+.stop-button{
+    background-color: hsl(10, 90%, 50%);
+}
+.start-button:hover{
+    background-color: hsl(115, 100%, 45%);
+}
+.reset-button{
+    background-color: hsl(205, 90%, 60%);
+}
+.reset-button:hover{
+    background-color: hsl(205, 90%, 55%);
+}
